--- a/src/translations/en/translation.json
+++ b/src/translations/en/translation.json
@@ -332,7 +332,28 @@
     "default": "Default",
     "phone": "Phone Number",
     "addNewAddress": "Add New Address",
-    "viewDetails": "View Details"
+    "viewDetails": "View Details",
+    "editProfile": "Edit Profile",
+    "pointsAbbr": "pts",
+    "loyaltyRewards": "Loyalty Rewards",
+    "pointsValue": "≈ {{value}} RWF",
+    "quickAccess": "Quick Access",
+    "preferences": "Preferences",
+    "management": "Management",
+    "helpSupport": "Help & Support",
+    "shippingInfo": "Shipping Info",
+    "details": "Details",
+    "tryAgain": "Try Again",
+    "loadingAccountInfo": "Loading account information...",
+    "email": "Email",
+    "orders": "My Orders",
+    "active": "Active Account",
+    "nextRewardLevel": "Next Reward Level",
+    "viewShopSpecificPoints": "View Shop-Specific Points",
+    "notProvided": "Not provided",
+    "accountRole": "Account Role",
+    "customer": "Customer",
+    "lastLogin": "Last login"
   },
   "order": {
     "returnRequested": "Return Requested"
