--- a/src/translations/fr/translation.json
+++ b/src/translations/fr/translation.json
@@ -304,7 +304,28 @@
     "dashboard": "Tableau de bord",
     "paymentMethods": "Méthodes de paiement",
     "security": "Sécurité",
-    "notifications": "Notifications"
+    "notifications": "Notifications",
+    "editProfile": "Modifier le profil",
+    "pointsAbbr": "pts",
+    "loyaltyRewards": "Récompenses de fidélité",
+    "pointsValue": "≈ {{value}} RWF",
+    "quickAccess": "Accès rapide",
+    "preferences": "Préférences",
+    "management": "Gestion",
+    "helpSupport": "Aide & Support",
+    "shippingInfo": "Informations d'expédition",
+    "details": "Détails",
+    "tryAgain": "Réessayer",
+    "loadingAccountInfo": "Chargement des informations du compte...",
+    "email": "Email",
+    "orders": "Mes commandes",
+    "active": "Compte actif",
+    "nextRewardLevel": "Niveau de récompense suivant",
+    "viewShopSpecificPoints": "Afficher les points spécifiques à la boutique",
+    "notProvided": "Non fourni",
+    "accountRole": "Rôle du compte",
+    "customer": "Client",
+    "lastLogin": "Dernière connexion"
   },
   "order": {
     "returnRequested": "Retour demandé"
