--- a/src/translations/rw/translation.json
+++ b/src/translations/rw/translation.json
@@ -304,7 +304,28 @@
     "dashboard": "Dashboard",
     "paymentMethods": "Uburyo bwo kwishyura",
     "security": "Umutekano",
-    "notifications": "Imenyekanisha"
+    "notifications": "Imenyekanisha",
+    "editProfile": "Hindura umwanya",
+    "pointsAbbr": "tug",
+    "loyaltyRewards": "Tuyange tu mahoro",
+    "pointsValue": "≈ {{value}} RWF",
+    "quickAccess": "Kinjira vuba",
+    "preferences": "Ibyo waganisha",
+    "management": "Kumateka",
+    "helpSupport": "Ifashasha & Inzira",
+    "shippingInfo": "Amakuru yo kugurisha",
+    "details": "Ibiciro",
+    "tryAgain": "Gerageza noneho",
+    "loadingAccountInfo": "Kohereza amakuru ya konti...",
+    "email": "Imeyili",
+    "orders": "Ibyatumije",
+    "active": "Konti y'ubushaka",
+    "nextRewardLevel": "Inzira y'ibighe bikakira",
+    "viewShopSpecificPoints": "Reba amanota y'isoko",
+    "notProvided": "Ntabwo yatanzwe",
+    "accountRole": "Inzira y'ikonti",
+    "customer": "Umwiryaji",
+    "lastLogin": "Winjiye bwa nyuma"
   },
   "order": {
     "returnRequested": "Gusubiza byasabwe"
